force-app/main/default/objects/CARE_CI_SA__c/CARE_CI_SA__c.object-meta.xml
<CustomObject>
    <description>CARE SA latest enrollment dates based on the YES/NO data in EI_SA_CHAR where char type cd = &apos;CARE&apos; or &apos;FERA&apos;</description>
    <label>CARE CI SA</label>
    <nameField>
        <displayFormat>CICCSA{0000000000}</displayFormat>
        <label>NAME (Sequence No)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE CI SA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>