force-app/main/default/objects/CARE_CI_SA__c/fields/CARE_END_DT__c.field-meta.xml
<CustomField>
    <fullName>CARE_END_DT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CARE END DT</label>
    <type>Date</type>
</CustomField>