force-app/main/default/objects/CARE_CI_SA__c/fields/CARE_START_DT__c.field-meta.xml
<CustomField>
    <fullName>CARE_START_DT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CARE START DT</label>
    <required>true</required>
    <type>Date</type>
</CustomField>