force-app/main/default/objects/CARE_CI_SA__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discount Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>