force-app/main/default/objects/CARE_CI_SA__c/fields/PER_ID__c.field-meta.xml
<CustomField>
    <fullName>PER_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PER ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>