force-app/main/default/objects/CARE_CI_SA__c/fields/PREM_ID__c.field-meta.xml
<CustomField>
    <fullName>PREM_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PREM ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>