force-app/main/default/objects/CARE_CI_SA__c/fields/SITE__c.field-meta.xml
<CustomField>
    <fullName>SITE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site/Service Agreement</label>
    <referenceTo>EI_Site__c</referenceTo>
    <relationshipLabel>CARE CI SA</relationshipLabel>
    <relationshipName>CARE_CI_SA</relationshipName>
    <type>Lookup</type>
</CustomField>