force-app/main/default/objects/CARE_CI_SA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SA_ID__c</columns>
    <columns>Discount_Type__c</columns>
    <columns>CARE_START_DT__c</columns>
    <columns>CARE_END_DT__c</columns>
    <columns>ACCT_ID__c</columns>
    <columns>PER_ID__c</columns>
    <columns>PREM_ID__c</columns>
    <columns>SITE__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>EXTERNAL_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>